Twenty Twenty / Tiled Galleries: fix layout (#14224)
When inserting a Tiled Gallery inside a classic block, you'll notice some layout issues with the Twenty Twenty theme. Those do not apply to the Tiled Gallery block since it uses its own CSS Class.

--- a/modules/theme-tools/compat/twentytwenty.css
+++ b/modules/theme-tools/compat/twentytwenty.css
@@ -221,6 +221,11 @@
 	width: 100%;
 }
 
+/* Tiled Galleries in Classic Blocks */
+.entry-content .tiled-gallery {
+	margin: 0 auto 1.5em;
+}
+
 /**
  * Shortcodes
  */
